--- a/src/components/zoom-buttons/zoom-buttons.scss
+++ b/src/components/zoom-buttons/zoom-buttons.scss
@@ -2,8 +2,8 @@
 
 .zoom-buttons-container {
   z-index: 2;
-  position: relative;
-  top: -108px;
+  position: absolute;
+  top: 2px;
   left: 2px;
   width: 130px;
   display: flex;
